2006-11-17  Michael Smith  <msmith@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkJ2.java: (AudioSinkJ2.open):
	  Attempt to use Real Alsa Devices instead of the software mixer,
	  which doesn't provide good sync, if possible.

2006-11-16  Michael Smith  <msmith@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado...init):
	  Use seekable parameter instead of live to determine seekability.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado...actionPerformed),
	(Cortado...realRun), (Cortado...mouseDragged),
	(Cortado...mouseMoved), (Cortado...handleMessage),
	(Cortado...newState), (Cortado...newSeek), (Cortado...start):
	Handle resize correctly.

	* src/com/fluendo/plugin/VideoSink.java: (VideoSink.setCapsFunc),
	(VideoSink.render), (VideoSink), (VideoSink.getFactoryName),
	(VideoSink.setProperty):
	Fix keep-aspect. Added scale property.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Message.java: (Message), (Message.toString),
	(Message.newEOS), (Message.newError), (Message.newWarning),
	(Message.newStateDirty):
	Add duration message.

	* README:
	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado...getAppletInfo), (Cortado...getRevision),
	(Cortado...getParameterInfo), (Cortado...init),
	(Cortado...handleMessage):
	Make live and seekable enums so that they can be configured
	automatically on request.
	When we get a duration message, make the stream seekable and
	non-live in auto mode.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.getInputStream):
	Post duration message when the length is known.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/OggDemux.java: (OggDemux.....OggStream),
	(OggDemux.....OggStream.OggStream),
	(OggDemux.....OggStream.deActivate),
	(OggDemux.....OggStream.reStart):
	Get the time right for streams that don't start with timestamp 0.

2006-11-16  Wim Taymans  <wim@fluendo.com>

	* README: